[gd_scene load_steps=18 format=2]

[ext_resource path="res://ui/ui.gd" type="Script" id=1]
[ext_resource path="res://ui/panels/unit_controls_panel.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/shop.tscn" type="PackedScene" id=3]
[ext_resource path="res://hud/hud.gd" type="Script" id=4]
[ext_resource path="res://ui/minimap_container.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/ui/kenvector_future.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://ui/panels/orders_panel.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/panels/control_panel.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/stats.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/panels/dialog_panel.tscn" type="PackedScene" id=10]
[ext_resource path="res://ui/menus/main_menu.tscn" type="PackedScene" id=11]
[ext_resource path="res://ui/leaders_icons.tscn" type="PackedScene" id=12]
[ext_resource path="res://ui/menus/pause_menu.tscn" type="PackedScene" id=13]
[ext_resource path="res://ui/menus/new_game_menu.tscn" type="PackedScene" id=14]
[ext_resource path="res://ui/scoreboard/scoreboard.tscn" type="PackedScene" id=18]
[ext_resource path="res://ui/cheat_console.gd" type="Script" id=19]

[sub_resource type="DynamicFont" id=17]
size = 11
font_data = ExtResource( 6 )

[node name="ui" type="CanvasLayer"]
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "Prevents ui panning"
}

[node name="top_left" type="Control" parent="."]

[node name="fps" type="Label" parent="top_left"]
unique_name_in_owner = true
margin_left = 4.0
margin_top = 2.0
margin_right = 124.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 17 )
text = "fps
"

[node name="top_mid" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5

[node name="main_label" type="Label" parent="top_mid"]
unique_name_in_owner = true
margin_left = -150.0
margin_top = 2.0
margin_right = 150.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 17 )
text = "shotcaller
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top_right" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0

[node name="shop" parent="top_right" instance=ExtResource( 3 )]
unique_name_in_owner = true

[node name="mid_right" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5

[node name="mid" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="main_menu" parent="mid" instance=ExtResource( 11 )]
unique_name_in_owner = true
margin_left = -300.0
margin_top = -300.0
margin_right = -300.0
margin_bottom = -300.0

[node name="pause_menu" parent="mid" instance=ExtResource( 13 )]
pause_mode = 2
unique_name_in_owner = true
visible = false
margin_left = -300.0
margin_top = -300.0
margin_right = -300.0
margin_bottom = -300.0

[node name="new_game_menu" parent="mid" instance=ExtResource( 14 )]
unique_name_in_owner = true
visible = false
margin_left = -300.0
margin_top = -300.0
margin_right = -300.0
margin_bottom = -300.0

[node name="mid_left" type="Control" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5

[node name="leaders_icons" parent="mid_left" instance=ExtResource( 12 )]
unique_name_in_owner = true

[node name="cheat_console" type="TextEdit" parent="mid_left"]
pause_mode = 2
visible = false
margin_left = 3.0
margin_top = -210.0
margin_right = 130.0
margin_bottom = -193.0
context_menu_enabled = false
shortcut_keys_enabled = false
script = ExtResource( 19 )

[node name="bot_left" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0

[node name="minimap_container" parent="bot_left" instance=ExtResource( 5 )]
unique_name_in_owner = true

[node name="bot_mid" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0

[node name="stats" parent="bot_mid" instance=ExtResource( 9 )]
unique_name_in_owner = true

[node name="dialog" parent="bot_mid" instance=ExtResource( 10 )]
unique_name_in_owner = true
visible = false
margin_left = -215.0
margin_top = -340.0
margin_right = 205.0
margin_bottom = -200.0

[node name="bot_right" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="orders_panel" parent="bot_right" instance=ExtResource( 7 )]
unique_name_in_owner = true
visible = false

[node name="unit_controls_panel" parent="bot_right" instance=ExtResource( 2 )]
unique_name_in_owner = true
visible = false

[node name="control_panel" parent="bot_right" instance=ExtResource( 8 )]
unique_name_in_owner = true

[node name="hud" type="Control" parent="."]
script = ExtResource( 4 )

[node name="score_board" parent="." instance=ExtResource( 18 )]
pause_mode = 2
unique_name_in_owner = true
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 600.0
margin_bottom = 600.0
